--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,6 +3,8 @@ import HeaderLink from './HeaderLink.astro';
 import { SITE_TITLE } from '../consts';
 import { PHONE_NUMBER } from '../consts';
 import { PHONE_NUMBER2 } from '../consts';
+import { Image } from 'astro:assets';
+import WebLogoImg from '../assets/img/moc-mien-logo-full.png';
 ---
 
 <header>
@@ -23,12 +25,12 @@ import { PHONE_NUMBER2 } from '../consts';
 		</div>
 		
 		<a href="/" id="logo-url-home">
-			<img src="../../src/assets/img/moc-mien-logo-full.png" alt="Trung tâm Tiếng Trung Mộc Miên" class="main-site-icon">
+			<Image class ="main-site-logo" src={WebLogoImg} alt="Trang chủ | Trung tâm Tiếng Trung Mộc Miên" />
 		</a>
 
 		<div class="header-search">
 			<div class="search-container">
-				<i class="fa-solid fa-magnifying-glass search-icon"></i>
+				<i class="fas fa-search search-icon"></i>
 				<input type="text" placeholder="Tìm kiếm trên trang..."/>
 			</div>
 		</div>
@@ -65,6 +67,7 @@ import { PHONE_NUMBER2 } from '../consts';
 		width: 30%;
 		text-align: center;
 		color: #fff;
+		font-size: 16px;
 	}
 
 	.contact-wrapper i {
@@ -79,8 +82,9 @@ import { PHONE_NUMBER2 } from '../consts';
 		justify-content: center;
 	}
 
-	.main-site-icon {
+	.main-site-logo {
 		height: 85%;
+		width: unset;
 	}
 
 	.contact-main-info-wrapper a {
@@ -132,6 +136,7 @@ import { PHONE_NUMBER2 } from '../consts';
 		padding: 0 30px;
 		height: 100%;
 		color: #333;
+		font-size: 16px;
 	}
 
 	.internal-links-nav a:hover {
