--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,9 +22,9 @@ import Course1Img from '../assets/img/course-1.jpg';
 					<h2 class="intro-sub-heading">Giới thiệu</h2>
 					<h1 class="intro-heading">Trung tâm<br>Tiếng Trung Mộc Miên</h1>
 					<p class="intro-content-p">
-						Được thành lập vào năm 2014, Mộc Miên tự hào là trung tâm uy tín đã đồng hành cùng hơn 30.000 học viên chinh phục thành công chứng chỉ HSK.
+						Được thành lập vào năm 2020, Mộc Miên tự hào là trung tâm uy tín đã đồng hành cùng hơn 300 học viên chinh phục thành công chứng chỉ HSK.
 						<br>
-						Với lộ trình học tập tinh gọn, đội ngũ giáo viên chuyên môn cao, cùng giáo trình được biên soạn độc quyền bởi Founder - Thạc sĩ Nguyễn Thị A (HSK6), Mộc Miên đã giúp hàng chục nghìn học viên thành công trong bộ môn tiếng Trung, vươn đến mục tiêu thành thạo ngoại ngữ nhanh chóng, xuất khẩu lao động, ... ghi hết ra. 
+						Với lộ trình học tập tinh gọn, đội ngũ giáo viên chuyên môn cao, cùng giáo trình được biên soạn độc quyền bởi Founder - Thạc sĩ Hồ Thị Tình (HSK6), Mộc Miên đã giúp hàng chục nghìn học viên thành công trong bộ môn tiếng Trung, vươn đến mục tiêu thành thạo ngoại ngữ nhanh chóng, đi làm việc, đi du lịch, ... 
 					</p>
 					<a href="/gioi-thieu" class="view-about-btn">Xem chi tiết</a>
 				</div>
@@ -39,7 +39,7 @@ import Course1Img from '../assets/img/course-1.jpg';
 							<i class="fas fa-star"></i>
 							<i class="fas fa-star"></i>
 							<i class="far fa-star"></i>
-							<p class="teacher-name">Cô giáo 老师</p>
+							<p class="teacher-name">Cô giáo Hồ Thị Tình</p>
 							<p>Người có quyền lực nhất trung tâm</p>
 						</div>
 					</div>
@@ -54,32 +54,32 @@ import Course1Img from '../assets/img/course-1.jpg';
 						<h3 class="reason-heading main-page-h3-heading">Tiếng Trung <span style="color: var(--accent);">Mộc Miên</span></h3>
 					</div>
 					<p class="reason-intro-desc col-8 flex-center-v">
-						Với hơn 10 năm hình thành và phát triển, Anh ngữ Athena đã đồng hành cùng hơn 30.000 học viên chinh phục thành công chứng chỉ TOEIC,  IELTS từ con số 0 chỉ sau 1 khóa học duy nhất.
+						Với hơn {new Date().getFullYear() - 2020} năm hình thành và phát triển, Tiếng Trung Mộc Miên đã đồng hành cùng hơn 300 học viên chinh phục thành công chứng chỉ HSK từ con số 0 chỉ sau 1 khóa học duy nhất.
 					</p>
 				</div>
 				<div class="row">
 					<div class="reason-item col-3">
 						<div class="reason-item-head"><i class="far fa-graduation-cap"></i></div>
 						<p>
-							Đội ngũ giáo viên chuyên môn cao, dày dặn kinh nghiệm luyện thi thực tế
+							Lộ trình tinh gọn, không lan man, giúp học viên đạt mục tiêu về điểm số trong thời gian ngắn nhất.	
 						</p>
 					</div>
 					<div class="reason-item col-3">
 						<div class="reason-item-head"><i class="far fa-book"></i></div>
 						<p>
-							Lộ trình tinh gọn, không lan man, giúp học viên đạt mục tiêu về điểm số trong thời gian ngắn nhất.	
+							Giáo trình được thiết kế độc quyền bởi cô tình - Founder Mộc Miên. Giáo trình tinh gọn nhưng đầy đủ, phù hợp với mọi đối tượng
 						</p>
 					</div>
 					<div class="reason-item col-3">
 						<div class="reason-item-head"><i class="far fa-users-class"></i></div>
 						<p>
-							Giáo trình được thiết kế độc quyền bởi Thạc sĩ Đỗ Vân Anh - Founder Anh ngữ Athena (8.5 IELTS , 990 TOEIC)
+							Đội ngũ giáo viên chuyên môn cao, dày dặn kinh nghiệm luyện thi thực tế
 						</p>
 					</div>
 					<div class="reason-item col-3">
 						<div class="reason-item-head"><i class="far fa-tv"></i></div>
 						<p>
-							Học phí cạnh tranh nhất thị trường, hỗ trợ 50% lệ phí thi chứng chỉ cho học viên sau khóa học.
+							Đa dạng hình thức học: Trực tuyến hoặc trực tiếp. Phù hợp ngay cả khi bạn bận rộn đi làm.
 						</p>
 					</div>
 				</div>
@@ -94,7 +94,7 @@ import Course1Img from '../assets/img/course-1.jpg';
 					<div class="courses-description col-8">
 						<p class="flex-center-v">
 							Với sự đa dạng hóa khóa học từ offline đến online, mỗi học viên sẽ 
-							có cơ hội trải nghiệm phương pháp học tiếng Anh độc đáo duy nhất tại Mộc Miên. 
+							có cơ hội trải nghiệm phương pháp học tiếng Trung độc đáo duy nhất tại Mộc Miên. 
 							Học viên sẽ dễ dàng tiếp nhận kiến thức mới nhờ phương pháp giảng dạy tinh gọn 
 							từ những giáo viên xuất sắc của trung tâm.
 						</p>
@@ -206,7 +206,7 @@ import Course1Img from '../assets/img/course-1.jpg';
 					<div class="video-wrapper col-6">
 						<div class="back-bg"/>
 						<video controls>
-							<source src="../src/assets/img/video-news.mp4" type="video/mp4">
+							<source src="/videos/video-news.mp4" type="video/mp4">
 						  Your browser does not support the video tag.
 						</video>
 					</div>
@@ -230,13 +230,13 @@ import Course1Img from '../assets/img/course-1.jpg';
 						<h4 class="main-page-h4-heading">Chinh phục HSK cùng <span style="color: var(--accent);">Mộc Miên</span>, tại sao không?</h3>
 						<ul class="news-body-list1">
 							<li>
-								Lộ trình tinh gọn chỉ với 01 khóa học duy nhất, phù hợp cho sinh viên, những bạn mất gốc và các bạn mới ra trường.
+								Lộ trình tinh gọn chỉ với 01 khóa học duy nhất, phù hợp cho sinh viên, người đi làm.
 							</li>
 							<li>	
 								Đội ngũ giáo viên chuyên môn cao, dày dặn kinh nghiệm luyện thi thực tế.
 							</li>
 							<li>
-								Tài liệu được biên soạn độc quyền bởi Thạc sĩ Đỗ Vân Anh - Founder Anh ngữ Athena (IELTS 8.5, TOEIC 990/990).
+								Tài liệu được biên soạn độc quyền bởi cô Tình - Founder Mộc Miên.
 							</li>
 							<li>
 								Cam kết đầu ra bằng hợp đồng, miễn phí học lại nếu không đạt mục tiêu.
@@ -248,7 +248,6 @@ import Course1Img from '../assets/img/course-1.jpg';
 			</div>
 		</main>
 		<Footer />
-
 		<script>
 			declare global {
 				interface Window {
@@ -266,5 +265,7 @@ import Course1Img from '../assets/img/course-1.jpg';
 			  }));
 			}
 		</script>
+		<script is:inline src="owlcarousel/owl.carousel.min.js"></script>
+		<script is:inline src="js/script.js"></script>
 	</body>	
 </html>
